--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 .DS_Store
+.idea/ARChEType_MadLibs-master.iml
+.idea/ARChEType_MadLibs-master.iml
+.idea/misc.xml
+__pycache__/Entity_Recognizer.cpython-37.pyc
+__pycache__/hw3utils.cpython-37.pyc
